# pomerol-example

./: CMakeLists.txt  Gf.plt  README.md  atomic.cpp  chi.plt  eigenvalues.plt
cmake/: CommonDefs.cmake  FindGSL.cmake
include/pomerol/: LatticePresetsExtra.h
src/pomerol/: LatticePresetsExtra.cpp  OperatorPresetsExtra.cpp
